--- a/packages/connect-explorer-nextra/pages/bitcoin/getPublicKey.mdx
+++ b/packages/connect-explorer-nextra/pages/bitcoin/getPublicKey.mdx
@@ -1,7 +1,7 @@
-import { ApiPlayground } from '../../components/ApiPlayground';
-import { Param } from '../../components/Param';
+import { ApiPlayground } from '../../src/components/ApiPlayground';
+import { Param } from '../../src/components/Param';
 
-<ApiPlayground method="getPublicKey" />
+<ApiPlayground method="/method/getPublicKey" />
 
 ## Get public key
 
