feat(connect-explorer-nextra): method tester based on schema

--- a/packages/connect-explorer-nextra/pages/bitcoin/getPublicKey.mdx
+++ b/packages/connect-explorer-nextra/pages/bitcoin/getPublicKey.mdx
@@ -2,6 +2,7 @@ import { ApiPlayground } from '../../src/components/ApiPlayground';
 import { Param } from '../../src/components/Param';
 import { ParamsTable } from '../../src/components/ParamsTable';
 import { GetPublicKey } from '@trezor/connect/src/types/api/getPublicKey';
+import { Bundle } from '@trezor/connect/src/types/params';
 
 <ApiPlayground method="/method/getPublicKey" />
 
