--- a/packages/connect-explorer-nextra/src/pages/cardano/cardanoSignTransaction.mdx
+++ b/packages/connect-explorer-nextra/src/pages/cardano/cardanoSignTransaction.mdx
@@ -1,6 +1,6 @@
-import { ApiPlayground } from '../../src/components/ApiPlayground';
-import { Param } from '../../src/components/Param';
-import { ParamsTable } from '../../src/components/ParamsTable';
+import { ApiPlayground } from '../../components/ApiPlayground';
+import { Param } from '../../components/Param';
+import { ParamsTable } from '../../components/ParamsTable';
 import { CardanoSignTransaction } from '@trezor/connect/src/types/api/cardano';
 
 <ApiPlayground method="cardanoSignTransaction" schema={CardanoSignTransaction} />
