--- a/packages/connect-explorer-nextra/src/pages/protobuf.mdx
+++ b/packages/connect-explorer-nextra/src/pages/protobuf.mdx
@@ -1,4 +1,4 @@
-import { ParamsTable } from '../src/components/ParamsTable';
+import { ParamsTable } from '../components/ParamsTable';
 import { MessageType } from '@trezor/protobuf/src/messages-schema';
 
 ## Whole Protobuf schema
