--- a/packages/connect-explorer-nextra/src/pages/details/protobuf.mdx
+++ b/packages/connect-explorer-nextra/src/pages/details/protobuf.mdx
@@ -1,5 +1,6 @@
-import { ParamsTable } from '../components/ParamsTable';
 import { MessageType } from '@trezor/protobuf/src/messages-schema';
+
+import { ParamsTable } from '../../components/ParamsTable';
 
 ## Whole Protobuf schema
 
